# luaOpenCV

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml  libclang_test.py  opencv_build.bat  opencv_build.sh
cmake/: FindLua.cmake
kaguya_bind_generator/: CMakeLists.txt  generate_bindings.py  generate_param.json  test.ast  test.inc  test.sh
kaguya_bind_generator/test/: test.cpp
samples/: hello_opencv.lua
src/: bind_helper.hpp  cv_bind_type_traits.hpp  manual_bind.cc  manual_bind.inc  raw_bind.cc  raw_bind_generated.inc
test/: luaopencvtest.hpp  test_draw.cc  test_image.cc  test_mat.cc  test_type.cc
